# interview-sandbox

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  startup.sql
.devcontainer/: Dockerfile  devcontainer.json
src/sandbox/: app.py  settings.py
