[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
root = "src"

[tool.hatch.version]
path = "src/sandbox/__init__.py"

[project]
name = "sandbox"
description = "Sandbox for interview questions."
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
  "fastapi>=0.111.0",
  "mysql-connector-python>=8.4.0",
  "pydantic-settings",
  "PyMySQL>=1.1.1",
  "sqlalchemy>=2.0.30",
  "uvicorn",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "src"
