[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
root = "src"

[project]
name = "sandbox"
description = "Sandbox for interview questions."
requires-python = ">=3.12"
version = "0.0.1"

dependencies = [
  "fastapi>=0.111.0",
  "mysql-connector-python>=8.4.0",
  "pydantic-settings",
  "PyMySQL>=1.1.1",
  "sqlalchemy>=2.0.30",
  "uvicorn",
]

[tool.hatch.envs.default]
path = ".venv"

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "src"
